# ayon-shotgrid

./: .gitignore  README.md  __init__.py  create_package.py  mkdocs.yml  package.py  pyproject.toml  rezbuild.py  ruff.toml  version.py  versions.json
.github/workflows/: deploy_docker_images.yml  deploy_mkdocs.yml  run_services_tests.yml
0.5.2/: 404.html  index.html  license.html  objects.inv
0.5.2/autoapi/: summary.html
0.5.2/autoapi/client/: index.html
0.5.2/autoapi/server/: index.html
0.5.2/autoapi/service_tools/: main.html
0.5.2/search/: search_index.js  search_index.json
0.6.12/: 404.html  index.html  license.html
0.6.12/autoapi/: summary.html
0.6.12/search/: search_index.js
0.6.13/: 404.html  index.html  license.html  objects.inv
0.6.13/autoapi/: summary.html
0.6.13/search/: search_index.js  search_index.json
0.6.14/: index.html  license.html
0.6.14/autoapi/: summary.html
0.6.15/: 404.html
0.6.15/search/: search_index.js  search_index.json
0.6.16/: 404.html  index.html  license.html
0.6.16/autoapi/: summary.html
0.6.16/search/: search_index.js  search_index.json
0.6.17/: 404.html  index.html  objects.inv
0.6.17/autoapi/: summary.html
0.6.18/search/: search_index.js  search_index.json
0.6.19/: license.html
0.6.19/search/: search_index.js  search_index.json
client/: pyproject.toml
client/ayon_shotgrid/: __init__.py  addon.py  version.py
docs/: index.md
server/: __init__.py
server/settings/: __init__.py  conversions.py  main.py
service_tools/: .gitignore  Makefile  README.md  example_env  main.py  manage.ps1  pyproject.toml  requirements.txt
services/: .dockerignore  Makefile  manage.ps1
services/leecher/: Dockerfile  Makefile  README.md  pyproject.toml  sample_env
services/leecher/leecher/: __init__.py  __main__.py  listener.py
services/processor/: Dockerfile  Makefile  pyproject.toml  sample_env
services/processor/handlers/: event_create_custom_attributes.py  event_sync_from_shotgrid.py
services/processor/lib/: constants.py  sync_from_shotgrid.py  utils.py
services/processor/processor/: __init__.py  __main__.py  processor.py
services/processor/processor/ayon_shotgrid_hub/: __init__.py  match_shotgrid_hierarchy_in_ayon.py  update_from_shotgrid.py
services/processor/processor/handlers/: _sync_from_shotgrid.py  _update_from_shotgrid.py  create_project.py  event_prepare_project.py  event_sync_from_shotgrid.py  prepare_project.py  project_sync.py  shotgrid_event.py  sync_from_ayon.py  sync_from_shotgrid.py  sync_projects.py  update_from_shotgrid.py
services/processor/processor/lib/: _old_sync_from_shotgrid.py  ayon_shotgrid_hub.py  constants.py  sync_ayon_to_shotgrid.py  sync_from_shotgrid.py  sync_shotgrid_to_ayon.py  update_from_shotgrid.py  utils.py
services/processor/processor/lib/ayon_shotgrid_hub/: __init__.py  sync_ayon_to_shotgrid.py  update_from_shotgrid.py
services/shotgrid_common/: _shotgrid.py  constants.py  utils.py  validate.py
services/tests/: __init__.py  conftest.py  helpers.py  test_sg_base.py  test_shotgrid.py
services/transmitter/: Dockerfile  Makefile  pyproject.toml  sample_env
services/transmitter/transmitter/: __init__.py  __main__.py  transmitter.py
services/transmitter/transmitter/handlers/: sync_from_shotgrid.py  update_from_shotgrid.py
settings/: __init__.py  common.py  main.py  service_handlers.py
test-build/: 404.html  index.html  license.html
test-build/autoapi/: summary.html
test-build/search/: search_index.js  search_index.json
(+356 files in other folders)
