[project]
version = "1.0.0"
name = "shotgrid-service-tools"
requires-python = ">=3.10"

dependencies = [
    "arrow",
    "ayon-python-api>=1.0.0",
    "shotgun-api3==3.5.1",
]

[project.optional-dependencies]
test = [
    "pytest",
    "mock",
    "pytest-ayon @ git+https://github.com/ynput/pytest-ayon.git#enhancement/split_project_fixture",
]
