[tool.poetry]
name = "shotgrid-leecher"
version = "0.4.1-dev.1"
description = "Shotgrid Integration for Ayon"
authors = ["Oscar Domingo <oscar.domingo@ynput.com>"]

[tool.poetry.dependencies]
appdirs = "^1.4"
python = ">=3.9,<4.0"
pydantic = "^1.10.2"
ayon-python-api = "^1.0.0"
shotgun-api3 = { git = "https://github.com/shotgunsoftware/python-api.git", tag = "v3.4.0" }

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
