[tool.poetry]
name = "shotgrid-leecher"
version = "0.6.16"
description = "Shotgrid Integration for AYON"
authors = ["Oscar Domingo <oscar.domingo@ynput.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
ayon_python_api = "^1.2.7"
shotgun-api3 = "*"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
