[project]
name = "shotgrid-transmitter"
version = "0.6.17+dev"
description = "Shotgrid Integration for AYON"
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
requires-python = ">=3.11"
dependencies = [
    "arrow",
    "ayon_python_api>=1.2.7",
    "shotgun-api3"
]

[tool.uv]
package = false
